# fire_operaciones

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml
src/: enricher.py  extractor.py  market.py  parser.py  pipeline.py  schema.py
src/app/: main.py
tests/: dummy_data.txt
