[project]
name = "fire-operaciones"
version = "0.1.0"
description = "WhatsApp investment operations parser for the FIRE community"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "instructor>=1.7.0",
    "pydantic>=2.0.0",
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "streamlit>=1.44.0",
    "typer>=0.15.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fire = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["cli.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
